fix: Google material font on mobile now appears correctly

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ ul {
 
 ul .material-icons {
   cursor: pointer;
+  text-rendering: optimizeLegibility;
 }
 
 a {
